putter_fop_stat(): set st_mode to S_IFCHR.

Fixes PR #44807: something broken in stat(2).